--- a/index.html
+++ b/index.html
@@ -7,5 +7,9 @@
 <body>
 	<h1>Bienvenido aquí esta es mi página</h1>
 	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod quaerat, asperiores illum esse impedit deserunt, quas. Vero minus voluptatum, laudantium quo quia amet asperiores sit harum voluptatem magnam tenetur fugit ratione, excepturi natus doloremque esse ipsam debitis quas, quibusdam corporis eaque possimus voluptatibus repellat! Minus unde quidem, alias vero reprehenderit assumenda voluptate deserunt quasi, blanditiis explicabo velit quas delectus inventore libero nihil enim omnis. Asperiores eveniet voluptate velit, sed debitis at fugiat, obcaecati possimus eligendi! Maiores expedita, laborum corrupti. Totam expedita nobis temporibus distinctio magnam, numquam voluptate deleniti illo. Odit voluptatum fuga, totam obcaecati, fugiat quos placeat quas! Numquam, odit.</p>
+
+	<section><article>
+		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorum dignissimos officiis cum ad dicta beatae eaque enim delectus vel assumenda qui nam adipisci, consectetur repellendus dolor ullam dolore commodi, voluptates similique quas deleniti? Nisi, vero consequatur possimus sapiente ex dolorem adipisci vel esse nostrum temporibus impedit culpa fugit ipsum animi magnam quo quis est incidunt ab expedita harum obcaecati, numquam, cupiditate. Vel officiis sed illum, architecto voluptates. Quos odio rerum possimus aliquam sed, ut veritatis, a saepe iste et facere nemo atque, nam voluptatibus tempore odit cupiditate qui corporis architecto blanditiis assumenda, dignissimos ex quod debitis. Accusamus possimus, alias. Magni!</p>
+	</article></section>
 </body>
 </html>
