--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 <body>
 	<h1>Bienvenido aquí esta es mi página</h1>
 	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod quaerat, asperiores illum esse impedit deserunt, quas. Vero minus voluptatum, laudantium quo quia amet asperiores sit harum voluptatem magnam tenetur fugit ratione, excepturi natus doloremque esse ipsam debitis quas, quibusdam corporis eaque possimus voluptatibus repellat! Minus unde quidem, alias vero reprehenderit assumenda voluptate deserunt quasi, blanditiis explicabo velit quas delectus inventore libero nihil enim omnis. Asperiores eveniet voluptate velit, sed debitis at fugiat, obcaecati possimus eligendi! Maiores expedita, laborum corrupti. Totam expedita nobis temporibus distinctio magnam, numquam voluptate deleniti illo. Odit voluptatum fuga, totam obcaecati, fugiat quos placeat quas! Numquam, odit.</p>
+	<span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia similique, ut minus magnam pariatur ad aut optio ducimus. Consectetur, fuga!</span>
 </body>
 </html>
